# jade

./: .gitignore  HELLO.md  README.md  pyproject.toml  readme.md  test.jde
.github/workflows/: ci.yml  publish.yaml
src/compiler/: compile.py  compiler.py  main.py
src/exec/: jade.sh  jadeinstall.sh
src/jade_project_JOERICKS1998/: main.py
src/jade_project_JOERICKS1998/compiler/: main.py
src/jade_project_JOERICKS1998/constants/: constants.py
src/jade_project_JOERICKS1998/llm/: prompt.py
src/jade_project_JOERICKS1998/utils/: compiler.py  processing.py  setup.py
